<!-- Define preferences -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <!-- let user to type something in -->
        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />

        <!-- choose from list of objects -->
        <ListPreference
                app:key="reply"
                app:title="@string/reply_title"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:defaultValue="reply"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <!-- Does same thing as checkbox, but with more modern interface -->
        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

        <SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync" />

    </PreferenceCategory>

</PreferenceScreen>